/*
 * test_records_index_compat.proto
 *
 * This source file is part of the FoundationDB open source project
 *
 * Copyright 2015-2018 Apple Inc. and the FoundationDB project authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

package com.apple.foundationdb.record.testcompat;

option java_package = "com.apple.foundationdb.record";
option java_outer_classname = "TestRecordsIndexCompatProto";

import "record_metadata_options.proto";

message MyCompatRecord {
  required int64 rec_no = 1 [(field).primary_key = true];
  optional string index = 2 [(field).indexed = INDEX];
  optional string unique = 3 [(field).indexed = UNIQUE];
  optional string rank = 4 [(field).indexed = RANK];
  optional string rank_unique = 5 [(field).indexed = RANK_UNIQUE];
  optional string none = 6;
}

message MyModernRecord {
  required int64 rec_no = 1 [(field).primary_key = true];
  optional string index = 2 [(field).index = {}];
  optional string unique = 3 [(field).index = { unique: true }];
  optional string rank = 4 [(field).index = { type: "rank" }];
  optional string rank_unique = 5 [(field).index = { type: "rank" unique: true }];
  optional string none = 6;
}

message RecordTypeUnion {
  optional MyCompatRecord _MyCompatRecord = 1;
  optional MyModernRecord _MyModernRecord = 2;
}
