/*
 * test_records_multi.proto
 *
 * This source file is part of the FoundationDB open source project
 *
 * Copyright 2015-2018 Apple Inc. and the FoundationDB project authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

package com.apple.foundationdb.record;
option java_outer_classname = "TestRecordsMultiProto";

import "record_metadata_options.proto";
option (schema).split_long_records = true;

message MultiRecordOne {
    optional int64 id = 1 [(field).primary_key = true];
    optional string name = 2;
    repeated string element = 3;
}

message MultiRecordTwo {
    optional int64 ego = 1 [(field).primary_key = true];
    optional string value = 2;
    repeated string element = 3;
}

message MultiRecordThree {
    optional int64 ego = 1 [(field).primary_key = true];
    optional string data = 2;
    repeated string element = 3;
}

message MultiDescriptor {
    option (record).usage = UNION;
    optional MultiRecordOne _MultiRecordOne = 1;
    optional MultiRecordTwo _MultiRecordTwo = 2;
    optional MultiRecordThree _MultiRecordThree = 3;
}
